Fix scrolling issue on mobile #5

--- a/css/style.css
+++ b/css/style.css
@@ -277,7 +277,7 @@ hr {
 
 .hsContainer {
 	width: 100%;
-	height: 720px;
+	min-height: 720px;
 	overflow: hidden;
 	position: relative;
 }
